# P013

./: .gitignore  Procfile  README.md  project_tree.py  requirements.txt
stays/: Procfile  README.md  manage.py  project_tree.py  public_key_staydmin  pyproject.toml  pyproject_backup.toml  pytest.ini  requirements.txt  tox.ini
stays/core/: __init__.py  forms.py  models.py  signals.py  urls.py  views.py
stays/core/migrations/: 0001_initial.py  0002_alter_publication_updated_at.py  0003_alter_publication_published_from_country_code_and_more.py  0004_alter_publication_voice_story.py
stays/core/utils/: __init__.py  models_helpers.py  requests_helpers.py
stays/locations/: __init__.py  apps.py  continents.json  models.py  urls.py  views.py
stays/locations/migrations/: 0001_initial.py
stays/locations/templatetags/: replace_in_str.py
stays/locations/tests/: datasets.py  helpers.py
stays/locations/utils/: country_general_info.json  helpers.py  ninjas_api_air_paris_response.json  ninjas_api_time_paris_response.json  (+1 more)
stays/stays/: api.py  asgi.py  conf.json  env  manage.py  pytest.ini  requirements.BACKUP  settings.py  urls.py  wsgi.py
stays/templates/: 403-a.html  403-b.html  410-a.html  418-a.html  504-a.html  account.html  base.html  contact.html  country.html  delete_account.html  feed.html  footer.html  header.html  password_reset_complete.html  profile.html  publication.html  publish.html  settings.html  signup.html  stays.html  update_publication.html
stays/users/: admin.py  backends.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
(+357 files in other folders)
