[tool.poetry]
name = "stays"
version = "0.1.0"
description = ""
authors = ["nojoven <work.cedricjoseph@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
pymongo = "^4.5.0"
psycopg = "^3.1.10"
pytest = "^7.4.1"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
